<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/calculator_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">


        <Spinner
            android:id="@+id/input_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/package_type"
            android:prompt="@string/choose_package">
        </Spinner>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/input_loan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHint="@color/colorConcreteGray"
                android:hint="@string/hint_loan" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <EditText
                android:id="@+id/input_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/colorConcreteGray"
                android:hint="@string/hint_duration" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_calculate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate_loan"
            android:background="@drawable/blue_round_corner"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/monthly_payment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment_label"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dp"
            android:layout_below="@id/btn_calculate"
            android:layout_centerHorizontal="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/total_monthly_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_monthly_payment"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:layout_below="@id/monthly_payment_label"
            android:layout_centerHorizontal="true"
            android:textSize="25sp" />

    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        app:backgroundTint="@color/fab_color"
        android:src="@drawable/ic_restore_white_24dp"
        app:layout_anchor="@id/calculator_view"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>

